fix carousel z-index

--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ h5 {
 
 #carouselExampleFade {
 	min-height: 440px;
+	z-index: -1
 }
 
 .quotes {
